--- a/index.html
+++ b/index.html
@@ -91,6 +91,36 @@
         </div>
     </div>
 
+    <!-- SECTION-2 -->
+     <div class="sec2 my-48">
+        <p class="text-center text-[62px] font-semibold">Windows 11: The best Windows yet</p>
+        <p class="text-center text-[18px] mt-5">Experience the power of the newest Windows OS. When there's a lot to do, let Windows 11 help you get it done.</p>
+
+        <div class="boxes flex gap-6 mt-[100px] px-20">
+            <div class="box w-[440px] h-[435px]">
+                <img src="Images/Meet-Windows-11.png" class="">
+                <p class="text-[34px] font-semibold mt-8">Meet Windows 11</p>
+                <p class="text-[15px] mt-3 mb-6">Get familiar with the new features of Windows 11 and see what makes it the best Windows operating system yet.</p>
+                <p class="flex items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">See what's new <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            </div>
+            <div class="box w-[440px] h-[435px]">
+                <img src="Images/Upgrade-Experience.png" class="">
+                <p class="text-[34px] font-semibold mt-8">Upgrade your Windows experience</p>
+                <p class="text-[15px] mt-3 mb-6">Learn how to get Windows 11 on your current PC4, or find instructions on buying a new PC that can run Windows 11.</p>
+                <p class="flex items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Get Windows 11 <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            </div>
+            <div class="box w-[440px] h-[435px]">
+                <img src="Images/Get-Help.png" class="">
+                <p class="text-[34px] font-semibold mt-8">Get help with Windows 11</p>
+                <p class="text-[15px] mt-3 mb-6">Need help transferring files, resetting a password, or upgrading to Windows 11? Explore the Windows support page for helpful articles on any problems you may be running into. Have a specific issue you’re troubleshooting? Ask your question in the Microsoft Community.</p>
+                <div class="2lines flex gap-6">
+                <p class="flex items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Get Windows support <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+                <p class="flex items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Ask the community <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+                </div>
+            </div>
+        </div>
+     </div>
+
 
     <script src="https://cdn.tailwindcss.com"></script>
 </body>
