--- a/index.html
+++ b/index.html
@@ -150,8 +150,31 @@
         </div>
     </div>
 
-    
+    <!-- SECTION 4 -->
+    <div class="sec2 my-32 px-[5%]">
+        <p class="text-center text-[62px] font-semibold">Find the right Windows PC</p>
+        <p class="text-center text-[18px] mt-5">Explore a selection of new Windows 11 PCs or get help selecting the best computer for you.</p>
+        <div class="btn flex justify-center">
+        <button class="text-[15px] hover:underline hover:underline-offset-4 hover:bg-[#005DA6] bg-[#0078D4] px-12 py-[10px] mt-7 rounded-md text-white font-semibold">Help me choose</button>
+        </div>
 
+        <div class="images flex gap-2 mt-24 h-[100vh]">
+            <div class="left w-[50%]">
+                <img src="Images/Grp-Img-1.png" class="rounded-md h-[100%]">
+            </div>
+
+            <div class="right w-auto">
+                <div class="upper gap-2 flex h-[49%]">
+                    <img src="Images/Grp-Img-2.png" class="w-[49%] h-[100%] rounded-md" alt="">
+                    <img src="Images/Grp-Img-3.png" class="w-[50%] h-[100%] rounded-md" alt="">
+                </div>
+
+                <img src="Images/Grp-Img-4.png" class="w-[100%] h-[50%] mt-2 rounded-md" alt="">
+            </div>
+
+
+        </div>
+    </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
 </body>
