--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
 
     <!-- SECTION 4 -->
-    <div class="sec2 my-32 px-[5%]">
+    <div class="sec4 mt-32 px-[5%]">
         <p class="text-center text-[62px] font-semibold">Find the right Windows PC</p>
         <p class="text-center text-[18px] mt-5">Explore a selection of new Windows 11 PCs or get help selecting the best computer for you.</p>
         <div class="btn flex justify-center">
@@ -173,6 +173,44 @@
             </div>
 
 
+        </div>
+    </div>
+
+    <!-- SECTION 5-->
+    <div class="sec5 h-[auto] bg-gradient-to-b from-[#d2e8fc] to-[#F9F9F9] my-28 px-[5%]">
+        <div class="upper flex gap-32">
+        <div class="left w-[100rem] h-[385px] mt-[15%]">
+            <div class="dash w-[60px] h-[4px] bg-gradient-to-r from-[#0067B8] to-[#50E6FF]"></div>
+            <p class="text-[62px] font-semibold mt-6" style="line-height: normal;">Better together</p>
+            <p class="text-[20px] mt-4" style="line-height: normal;">Explore the Windows 11 experiences built to bring your favourite Microsoft tools to life.</p>
+        </div>
+
+        <div class="right mt-20">
+            <img src="Images/Better-Together.png" class="rounded-md" alt="">
+        </div>
+        </div>
+
+        <div class="lower flex justify-center gap-12 mt-[25px]">
+            <div class="box w-[460px] h-[435px]">
+                <img src="Images/Microsoft-Store.png" class="">
+                <p class="text-[34px] font-semibold mt-8">Microsoft Store</p>
+                <p class="text-[15px] mt-3 mb-6">The apps you need. The shows you love. Find them fast in the new Microsoft Store.1 2</p>
+                <p class="flex items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Explore Windows apps <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            </div>
+
+            <div class="box w-[460px] h-[435px] mt-[10rem]">
+                <img src="Images/Microsoft-Edge.png" class="">
+                <p class="text-[34px] font-semibold mt-8">Microsoft Edge</p>
+                <p class="text-[15px] mt-3 mb-6">Get more out of your browsing experience with the browser that’s built for Windows.</p>
+                <p class="flex items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Get Microsoft Edge <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            </div>
+
+            <div class="box w-[460px] h-[435px]">
+                <img src="Images/Microsoft-365.png" class="">
+                <p class="text-[34px] font-semibold mt-8">Microsoft 365</p>
+                <p class="text-[15px] mt-3 mb-6">Maximise your productivity with easy-to-use Windows 11 multitasking tools. Microsoft 365 is built to work with the Microsoft apps you use every day.3</p>
+                <p class="flex items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Explore Microsoft 365 <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            </div>
         </div>
     </div>
 
