--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
 
     <!-- SECTION 5-->
-    <div class="sec5 h-[auto] bg-gradient-to-b from-[#d2e8fc] to-[#F9F9F9] my-28 px-[5%]">
+    <div class="sec5 h-[auto] bg-gradient-to-b from-[#d2e8fc] to-[#F9F9F9] mt-28 pb-20 px-[5%]">
         <div class="upper flex gap-32">
         <div class="left w-[100rem] h-[385px] mt-[15%]">
             <div class="dash w-[60px] h-[4px] bg-gradient-to-r from-[#0067B8] to-[#50E6FF]"></div>
@@ -190,7 +190,7 @@
         </div>
         </div>
 
-        <div class="lower flex justify-center gap-12 mt-[25px]">
+        <div class="lower flex gap-12 mt-[25px]">
             <div class="box w-[460px] h-[435px]">
                 <img src="Images/Microsoft-Store.png" class="">
                 <p class="text-[34px] font-semibold mt-8">Microsoft Store</p>
@@ -213,6 +213,33 @@
             </div>
         </div>
     </div>
+
+    <!-- SECTION 6 -->
+     <div class="sec6 flex gap-[9.5rem] h-[auto] bg-gradient-to-b from-[#8DC8E8] via-[#8dc8e8cb] px-[150px] py-[90px]">
+        <div class="left w-[45%]">
+            <p class="text-[46px] font-semibold" style="line-height: normal;">Need help with Windows?</p>
+            <p class="text-[18px] mt-5 mb-6" style="line-height: normal;">Get help with your transition to Windows 11. Find the tools you need to simplify your experience with Windows.</p>
+            <img src="Images/Need-Help-With-Windows.png" class="h-[23rem] w-[100%] mt-[4.5rem]" alt="">
+        </div>
+
+        <div class="right">
+            <hr class="bg-gray-400 border-none h-[0.5px]">
+            <p class="text-[34px] font-semibold mt-8">This PC is running Windows 11</p>
+            <p class="text-[15px] mt-3 mb-6">See if there are security or feature updates for this PC.</p>
+            <p class="flex mb-8 items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Check for updates <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            
+            <hr class="bg-gray-400 border-none h-[0.5px]">
+            <p class="text-[34px] font-semibold mt-8">Get Microsoft news and updates</p>
+            <p class="text-[15px] mt-3 mb-6">Subscribe to our newsletter to get the latest news, feature updates, how-to tips, deals and more for Windows and other Microsoft products.</p>
+            <p class="flex mb-8 items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Subscribe now <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            
+            <hr class="bg-gray-400 border-none h-[0.5px]">
+            <p class="text-[34px] font-semibold mt-8">Become a Windows insider</p>
+            <p class="text-[15px] mt-3 mb-6">Register with the Windows Insider Programme and start engaging with engineers to help shape the future of Windows.</p>
+            <p class="flex mb-8 items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Learn more <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
+            <hr class="bg-gray-400 border-none h-[0.5px]">
+        </div>
+     </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
 </body>
