Added Section-7 and Footer

--- a/index.html
+++ b/index.html
@@ -239,6 +239,87 @@
             <p class="flex mb-8 items-center gap-1 hover:underline hover:underline-offset-8 hover:cursor-pointer hover:gap-2 duration-150 text-[16px] mt-6 font-semibold text-[#0078D4]">Learn more <svg class="text-[#0078D4] mt-1" viewBox="0 0 24 24" fill="none" class="dig-UIIcon dig-UIIcon--standard" width="24" height="24" role="presentation" focusable="false"><path d="M5 11.75h12m-5.25-6.5 6.25 6.5-6.25 6.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" vector-effect="non-scaling-stroke"></path></svg></p>
             <hr class="bg-gray-400 border-none h-[0.5px]">
         </div>
+    </div>
+
+    <!--SECTION 7-->
+    <div class="sec7 pt-10 pb-7 px-20 bg-[#333333] text-white">
+        <p class="text-[11px] mb-[9px]">1 Screens simulated. Features and app availability may vary by region.</p>
+        <p class="text-[11px] mb-[9px]">2 Some apps shown coming later. Certain apps only available through Microsoft Store app in Windows 11.</p>
+        <p class="text-[11px] mb-[9px]">3 Microsoft 365 subscription sold separately.</p>
+        <p class="text-[11px] mb-[9px]">4 Windows 11 upgrade is available for eligible PCs that meet minimum device specifications. Upgrade timing may vary by device. Internet service fees may apply. Features and app availability may vary by region. Certain features require specific hardware (see Windows 11 specifications).</p>
+        <p class="text-[11px] mb-[9px]">5 Phone Link experience comes pre-installed on your PC with Windows 10 (running Windows 10, May 2019 Update at the least) or Windows 11. To experience the full functionality, Android phones must be running Android 7.0 or later. Phone Link for iOS requires iPhone with iOS 14 or higher, Windows 11 device, Bluetooth connection and the latest version of the Phone Link app. Not available for iPad (iPadOS) or MacOS. Device compatibility may vary. Regional restrictions may apply.</p>
+        <p class="text-[11px] mb-[9px]">6 Copilot in Windows (in preview) is available in selected global markets and will roll out starting in summer 2024 to Windows 11 PCs in the European Economic Area. Copilot in Windows 10 functionality is limited and has specific system requirements. Learn More.</p>
+    </div>
+
+    <!-- FOOTER -->
+     <div class="footer bg-[#f2f2f2] h-[auto] px-20 pb-4 pt-10 text-gray-600">
+        <div class="gridding grid gap-3 grid-cols-6">
+        <div class="col-1">
+            <p class="text-[15px] mb-3 font-semibold">What's new</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Surface Pro</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Surface Laptop</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Copilot</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft 365</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Windows 11 apps</p>
+        </div>
+
+        <div class="col-2">
+            <p class="text-[15px] mb-3 font-semibold">Microsoft Store</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Account profile</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Download Center</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Store Support</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Returns</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Order tracking</p>
+        </div>
+
+        <div class="col-3">
+            <p class="text-[15px] mb-2 font-semibold">Education</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft in education</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Devices for education</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Teams for Education</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft 365 Education</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Office Education</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Educator training and development</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Deals for students and parents</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Azure for students</p>
+        </div>
+
+        <div class="col-4">
+            <p class="text-[15px] mb-2 font-semibold">Business</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Cloud</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft security</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Azure</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Dynamics 365</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft 365</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Advertising</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Copilot for Microsoft 365</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Teams</p>
+        </div>
+
+        <div class="col-5">
+            <p class="text-[15px] mb-2 font-semibold">Developer & IT</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Developer Center</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Documentation</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft learn</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Tech Community</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Azure Marketplace</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">AppSource</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Microsoft Power Platform</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Visual Studio</p>
+        </div>
+
+        <div class="col-6">
+            <p class="text-[15px] mb-2 font-semibold">Careers</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">About Microsoft</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Company news</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Privacy at Microsoft</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Investors</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Security</p>
+            <p class="text-[11px] mb-3 hover:underline hover:cursor-pointer hover:text-black">Sustainability</p>
+        </div>
+        </div>
+
+        <p class="text-[14px]">English (India)</p>
      </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
